--- a/package.json
+++ b/package.json
@@ -1,58 +1,10 @@
 {
-  "name": "black-dashboard-angular",
+  "name": "sample-angular",
   "version": "1.0.0",
-  "description": "Black Dasboard Angular, a Creative Tim Desgin. Coded by Creative Tim",
+  "description": "sample-angular",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/creativetimofficial/black-dashboard-angular.git"
-  },
-  "keywords": [
-    "angular dashboard",
-    "angular admin",
-    "angular bootstrap admin",
-    "angular bootstrap dashboard",
-    "angular panel",
-    "angular bootstrap template",
-    "angular admin template",
-    "angular free",
-    "angular free dashboard",
-    "angular free bootstrap dashboard",
-    "free admin template",
-    "angular admin",
-    "angular admin panel",
-    "angular dashboard",
-    "angular dashboard free",
-    "angular admin free",
-    "angular free admin panel",
-    "angular freebie",
-    "angular freebie dashboard",
-    "angular freebie bootstrap dashboard",
-    "freebie admin template",
-    "angular dashboard freebie",
-    "angular admin freebie",
-    "angular freebie admin panel",
-    "creative tim",
-    "web dashboard",
-    "bootstrap 4 dashboard",
-    "bootstrap 4",
-    "css3 dashboard",
-    "bootstrap 4 admin",
-    "black dashboard bootstrap 4",
-    "frontend",
-    "responsive bootstrap 4 dashboard",
-    "free dashboard",
-    " free admin dashboard",
-    "free bootstrap 4 admin dashboard"
-  ],
-  "author": "Creative Tim <hello@creative-tim.com> (https://www.creative-tim.com/)",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/creativetimofficial/black-dashboard-angular/issues"
-  },
-  "homepage": "https://demos.creative-tim.com/black-dashboard-angular/#/dashboard",
   "private": false,
   "dependencies": {
     "@angular/animations": "8.0.2",
@@ -65,7 +17,6 @@
     "@angular/router": "8.0.2",
     "@ng-bootstrap/ng-bootstrap": "4.2.1",
     "bootstrap": "^4.3.1",
-    "chart.js": "2.8.0",
     "core-js": "3.1.4",
     "ngx-toastr": "10.0.4",
     "rxjs": "6.5.2",
